// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NoticeBar > NoticeBar baseVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <!---->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      这是一条普通的通知信息
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`NoticeBar > NoticeBar customVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info cover-class"
>
  <div
    class="t-notice-bar__prefix-icon"
  >
    
    <svg
      class="t-icon t-icon-sound"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M15 1.29004V22.7095L5.7369 17.4998L1 17.4998L1 6.49976H5.7369L15 1.29004ZM4.99882 8.49976H3L3 15.4998L4.99882 15.4998L4.99882 8.49976ZM6.99882 15.9149L13 19.29V4.70949L6.99882 8.08465V15.9149ZM20.9791 6.98155L21.5818 7.77956C22.4998 8.99522 22.9963 10.4772 22.9958 12.0006C22.9952 13.5239 22.4977 15.0056 21.5788 16.2206L20.9756 17.0182L19.3805 15.8117L19.9837 15.0142C20.64 14.1463 20.9954 13.088 20.9958 11.9999C20.9961 10.9117 20.6415 9.85319 19.9858 8.98486L19.3831 8.18686L20.9791 6.98155ZM18.1864 9.09068L18.7891 9.88869C19.2481 10.4965 19.4963 11.2375 19.496 11.9992C19.4958 12.7609 19.247 13.5017 18.7876 14.1092L18.1844 14.9068L16.5892 13.7004L17.1924 12.9028C17.3893 12.6424 17.4959 12.3249 17.496 11.9985C17.4962 11.6721 17.3898 11.3545 17.1931 11.094L16.5904 10.296L18.1864 9.09068Z"
        fill="currentColor"
      />
    </svg>
    
  </div>
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述
      <!---->
    </div>
  </div>
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
        fill="currentColor"
      />
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar customizationVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述
      <span
        class="t-notice-bar__operation"
      >
        
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          style="margin-left: 2px;"
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            详情
            
          </span>
          <!---->
        </a>
        
      </span>
    </div>
  </div>
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
        fill="currentColor"
      />
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar eventVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        这是一条普通的消息通知
        <span
          class="t-notice-bar__operation"
        >
          
          <a
            aria-disabled="false"
            class="t-link t-link--primary t-link--medium"
            style="margin-left: 5px;"
            target=""
          >
            <!---->
            <span
              class="t-link__content"
            >
              
              详情
              
            </span>
            <!---->
          </a>
          
        </span>
      </div>
    </div>
    <div
      class="t-notice-bar__suffix-icon"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-notice-bar t-notice-bar--info"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        这是一条普通的通知信息
        <!---->
      </div>
    </div>
    <div
      class="t-notice-bar__suffix-icon"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  
</div>
`;

exports[`NoticeBar > NoticeBar iconDemoVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`NoticeBar > NoticeBar mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    NoticeBar 公告栏
  </h1>
  <p
    class="summary"
  >
    在导航栏下方，用于给用户显示提示消息。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纯文字的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!---->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <!---->
          </div>
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述
            <!---->
          </div>
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带关闭的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <!---->
          </div>
        </div>
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带入口的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的消息通知
            <span
              class="t-notice-bar__operation"
            >
              
              <a
                aria-disabled="false"
                class="t-link t-link--primary t-link--medium"
                style="margin-left: 5px;"
                target=""
              >
                <!---->
                <span
                  class="t-link__content"
                >
                  
                  详情
                  
                </span>
                <!---->
              </a>
              
            </span>
          </div>
        </div>
        <div
          class="t-notice-bar__suffix-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <!---->
          </div>
        </div>
        <div
          class="t-notice-bar__suffix-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定样式的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info cover-class"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          
          <svg
            class="t-icon t-icon-sound"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M15 1.29004V22.7095L5.7369 17.4998L1 17.4998L1 6.49976H5.7369L15 1.29004ZM4.99882 8.49976H3L3 15.4998L4.99882 15.4998L4.99882 8.49976ZM6.99882 15.9149L13 19.29V4.70949L6.99882 8.08465V15.9149ZM20.9791 6.98155L21.5818 7.77956C22.4998 8.99522 22.9963 10.4772 22.9958 12.0006C22.9952 13.5239 22.4977 15.0056 21.5788 16.2206L20.9756 17.0182L19.3805 15.8117L19.9837 15.0142C20.64 14.1463 20.9954 13.088 20.9958 11.9999C20.9961 10.9117 20.6415 9.85319 19.9858 8.98486L19.3831 8.18686L20.9791 6.98155ZM18.1864 9.09068L18.7891 9.88869C19.2481 10.4965 19.4963 11.2375 19.496 11.9992C19.4958 12.7609 19.247 13.5017 18.7876 14.1092L18.1844 14.9068L16.5892 13.7004L17.1924 12.9028C17.3893 12.6424 17.4959 12.3249 17.496 11.9985C17.4962 11.6721 17.3898 11.3545 17.1931 11.094L16.5904 10.296L18.1864 9.09068Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述
            <!---->
          </div>
        </div>
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义内容的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述
            <span
              class="t-notice-bar__operation"
            >
              
              <a
                aria-disabled="false"
                class="t-link t-link--primary t-link--medium"
                style="margin-left: 2px;"
                target=""
              >
                <!---->
                <span
                  class="t-link__content"
                >
                  
                  详情
                  
                </span>
                <!---->
              </a>
              
            </span>
          </div>
        </div>
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        公告栏类型有普通（info）、警示（warning）、成功（success）、错误（error）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            默认状态公告栏默认状态公告栏
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-notice-bar t-notice-bar--success notice-bar-demo-block"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            成功状态公告栏成功状态公告栏
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-notice-bar t-notice-bar--warning notice-bar-demo-block"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            警示状态公告栏警示状态公告栏
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-notice-bar t-notice-bar--error"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            错误状态公告栏错误状态公告栏
            <!---->
          </div>
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 可滚动的公告栏
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        可滚动公告栏有水平 (horizontal) 和垂直 (vertical)
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <!---->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述文
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述文
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          
          <svg
            class="t-icon t-icon-sound"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M15 1.29004V22.7095L5.7369 17.4998L1 17.4998L1 6.49976H5.7369L15 1.29004ZM4.99882 8.49976H3L3 15.4998L4.99882 15.4998L4.99882 8.49976ZM6.99882 15.9149L13 19.29V4.70949L6.99882 8.08465V15.9149ZM20.9791 6.98155L21.5818 7.77956C22.4998 8.99522 22.9963 10.4772 22.9958 12.0006C22.9952 13.5239 22.4977 15.0056 21.5788 16.2206L20.9756 17.0182L19.3805 15.8117L19.9837 15.0142C20.64 14.1463 20.9954 13.088 20.9958 11.9999C20.9961 10.9117 20.6415 9.85319 19.9858 8.98486L19.3831 8.18686L20.9791 6.98155ZM18.1864 9.09068L18.7891 9.88869C19.2481 10.4965 19.4963 11.2375 19.496 11.9992C19.4958 12.7609 19.247 13.5017 18.7876 14.1092L18.1844 14.9068L16.5892 13.7004L17.1924 12.9028C17.3893 12.6424 17.4959 12.3249 17.496 11.9985C17.4962 11.6721 17.3898 11.3545 17.1931 11.094L16.5904 10.296L18.1864 9.09068Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div>
            <div
              class="t-swiper t-swiper--default t-notice-bar__content--vertical"
            >
              <div
                class="t-swiper__container"
                style="flex-direction: column; transition: none; height: auto;"
              >
                
                
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    君不见
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    高堂明镜悲白发
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    朝如青丝暮成雪
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    人生得意须尽欢
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    莫使金樽空对月
                  </div>
                  
                </div>
                
                
              </div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar scrollingVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <!---->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        提示文字描述提示文字描述提示文字描述提示文字描述文
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        提示文字描述提示文字描述提示文字描述提示文字描述文
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-notice-bar t-notice-bar--info"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      
      <svg
        class="t-icon t-icon-sound"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M15 1.29004V22.7095L5.7369 17.4998L1 17.4998L1 6.49976H5.7369L15 1.29004ZM4.99882 8.49976H3L3 15.4998L4.99882 15.4998L4.99882 8.49976ZM6.99882 15.9149L13 19.29V4.70949L6.99882 8.08465V15.9149ZM20.9791 6.98155L21.5818 7.77956C22.4998 8.99522 22.9963 10.4772 22.9958 12.0006C22.9952 13.5239 22.4977 15.0056 21.5788 16.2206L20.9756 17.0182L19.3805 15.8117L19.9837 15.0142C20.64 14.1463 20.9954 13.088 20.9958 11.9999C20.9961 10.9117 20.6415 9.85319 19.9858 8.98486L19.3831 8.18686L20.9791 6.98155ZM18.1864 9.09068L18.7891 9.88869C19.2481 10.4965 19.4963 11.2375 19.496 11.9992C19.4958 12.7609 19.247 13.5017 18.7876 14.1092L18.1844 14.9068L16.5892 13.7004L17.1924 12.9028C17.3893 12.6424 17.4959 12.3249 17.496 11.9985C17.4962 11.6721 17.3898 11.3545 17.1931 11.094L16.5904 10.296L18.1864 9.09068Z"
          fill="currentColor"
        />
      </svg>
      
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div>
        <div
          class="t-swiper t-swiper--default t-notice-bar__content--vertical"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: column; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                君不见
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                高堂明镜悲白发
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                朝如青丝暮成雪
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                人生得意须尽欢
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                莫使金樽空对月
              </div>
              
            </div>
            
            
          </div>
          <!---->
        </div>
      </div>
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`NoticeBar > NoticeBar suffixIconVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      这是一条普通的通知信息
      <!---->
    </div>
  </div>
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
        fill="currentColor"
      />
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        默认状态公告栏默认状态公告栏
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-notice-bar t-notice-bar--success notice-bar-demo-block"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        成功状态公告栏成功状态公告栏
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-notice-bar t-notice-bar--warning notice-bar-demo-block"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        警示状态公告栏警示状态公告栏
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-notice-bar t-notice-bar--error"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        错误状态公告栏错误状态公告栏
        <!---->
      </div>
    </div>
    <!---->
  </div>
  
</div>
`;
